--- a/api/functions/get-swag/package.json
+++ b/api/functions/get-swag/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "add-swag",
+  "name": "get-swag",
   "version": "1.0.0",
-  "description": "Adds a piece of swag into the system",
+  "description": "Gets a list of swag",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,10 +10,6 @@
   "license": "ISC",
   "devDependencies": {
     "@aws-sdk/client-dynamodb": "^3.441.0",
-    "@aws-sdk/client-eventbridge": "^3.445.0",
     "@aws-sdk/util-dynamodb": "^3.441.0"
-  },
-  "dependencies": {
-    "bad-words": "^3.0.4"
   }
 }
