--- a/ui/package.json
+++ b/ui/package.json
@@ -9,7 +9,6 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
-    "cloudinary": "^1.32.0",
     "eslint-config-next": "^13.0.1",
     "framer-motion": "^7.6.4",
     "imagemin": "^8.0.1",
@@ -19,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-hooks-global-state": "^2.0.0",
     "react-swipeable": "^7.0.0",
-    "react-use-keypress": "^1.3.1"
+    "react-use-keypress": "^1.3.1",
+    "short-uuid": "^4.2.2"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
