--- a/ui/package.json
+++ b/ui/package.json
@@ -7,6 +7,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gomomento/sdk": "^1.47.1",
+    "@gomomento/sdk-web": "^1.47.1",
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "eslint-config-next": "^13.0.1",
@@ -17,9 +19,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hooks-global-state": "^2.0.0",
+    "react-loading-icons": "^1.1.0",
     "react-swipeable": "^7.0.0",
-    "react-use-keypress": "^1.3.1",
-    "short-uuid": "^4.2.2"
+    "react-use-keypress": "^1.3.1"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
