--- a/api/functions/convert-to-webp/package.json
+++ b/api/functions/convert-to-webp/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.449.0",
+    "@aws-sdk/client-secrets-manager": "^3.451.0",
     "sharp": "^0.32.6"
+  },
+  "dependencies": {
+    "@gomomento/sdk": "^1.48.1"
   }
 }
