--- a/api/functions/convert-heic/package.json
+++ b/api/functions/convert-heic/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "downscale-photo",
+  "name": "convert-heic",
   "version": "1.0.0",
-  "description": "Downscales photo for image processing",
+  "description": "Converts heic files to jpg",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "heic-convert": "^2.0.0"
+  },
   "devDependencies": {
-    "@aws-sdk/client-s3": "^3.445.0"
+    "@aws-sdk/client-s3": "^3.451.0"
   }
 }
