--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
     "react-hooks-global-state": "^2.0.0",
     "react-loading-icons": "^1.1.0",
     "react-swipeable": "^7.0.0",
+    "react-toastify": "^9.1.3",
     "react-use-keypress": "^1.3.1"
   },
   "devDependencies": {
